--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
+*{
+  background-color: black;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+h1{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+table {
+  border: 2px solid white;
+  width: 800px;
+  height: 200px;
+  color: azure;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+th {
+  border-bottom: 1px solid white;
+}
+
+td {
+  text-align: center;
 }
